Mobile friendly UI

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <h1>🍽️ Bill Splitter</h1>
-            <p class="subtitle">Drag dishes to people to split the bill</p>
+            <p class="subtitle">Tap or drag dishes to assign them to people</p>
         </header>
 
         <!-- Restaurant Info Section -->
@@ -26,8 +26,8 @@
                     <input type="number" id="totalAmount" placeholder="0" min="0">
                 </div>
                 <div class="form-group">
-                    <label for="discountedAmount">Discounted Amount</label>
-                    <input type="number" id="discountedAmount" placeholder="0" min="0">
+                    <label for="discountedAmount">Discounted (Final) Amount <span class="required">*</span></label>
+                    <input type="number" id="discountedAmount" placeholder="0" min="0" required>
                 </div>
                 <div class="form-group">
                     <label for="cashback">Cashback (append % for percentage)</label>
@@ -82,7 +82,7 @@
         <!-- Drop Zones for People -->
         <section class="card assignments-section">
             <h2>📋 Assignments</h2>
-            <p class="hint">Drag dishes from above and drop them on people below</p>
+            <p class="hint">Tap a dish above, then tap people below to assign (or drag on desktop)</p>
             <div class="assignments-grid" id="assignmentsGrid">
                 <p class="empty-state">Add people to see assignment zones</p>
             </div>
@@ -101,6 +101,19 @@
     </div>
 
     <div class="toast" id="toast"></div>
+
+    <!-- Mobile Assignment Modal -->
+    <div class="modal-overlay" id="assignModal">
+        <div class="modal">
+            <div class="modal-header">
+                <h3 id="modalDishName">Assign Dish</h3>
+                <button class="modal-close" id="closeModal">✕</button>
+            </div>
+            <p class="modal-hint">Select people to share this dish:</p>
+            <div class="modal-people" id="modalPeople"></div>
+            <button class="btn btn-primary modal-done" id="modalDone">Done</button>
+        </div>
+    </div>
 
     <script src="app.js"></script>
 </body>
