Add pasting support for better crops

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             
             <div class="upload-area" id="uploadArea">
                 <div class="upload-icon">📄</div>
-                <p>Drop bill image here or click to upload</p>
+                <p>Drop image, click to upload, or <strong>Ctrl+V</strong> to paste. Crop just the items from the bill and paste for best results</p>
                 <small>Supports JPG, PNG, WEBP</small>
                 <input type="file" id="billInput" class="file-input" accept="image/*">
             </div>
